--- a/app/assets/styles/prose.css
+++ b/app/assets/styles/prose.css
@@ -1,6 +1,8 @@
 /* MINIMAL PROSE */
 .prose {
-  h1, h2, h3 {
+  h1,
+  h2,
+  h3 {
     width: min-content;
     position: relative;
     white-space: nowrap;
