--- a/app/assets/styles/variables/components.css
+++ b/app/assets/styles/variables/components.css
@@ -1,6 +1,5 @@
-@import "./components/alerts.css";
-@import "./components/breadcrumbs.css";
-@import "./components/buttons.css";
-@import "./components/cards.css";
-@import "./components/dialogs.css";
-
+@import './components/alerts.css';
+@import './components/breadcrumbs.css';
+@import './components/buttons.css';
+@import './components/cards.css';
+@import './components/dialogs.css';
